force-app/main/default/objects/ABM_Record_Logs__c/ABM_Record_Logs__c.object-meta.xml
<CustomObject>
    <label>ABM Record Logs</label>
    <nameField>
        <label>ABM Record Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABM Record Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>