force-app/main/default/objects/ABM_Record_Logs__c/fields/Converted_Account__c.field-meta.xml
<CustomField>
    <fullName>Converted_Account__c</fullName>
    <formula>Converted_Lead__r.ConvertedAccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Account</label>
    <type>Text</type>
</CustomField>