force-app/main/default/objects/ABM_Record_Logs__c/fields/Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>ABM Record Logs</relationshipLabel>
    <relationshipName>ABM_Record_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>