force-app/main/default/objects/ABM_Record_Logs__c/fields/Lead_Company__c.field-meta.xml
<CustomField>
    <fullName>Lead_Company__c</fullName>
    <formula>Converted_Lead__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Company</label>
    <type>Text</type>
</CustomField>